changed one text colour because of contrast issues

--- a/src/pages/Create/CreateEditor/CreateEditor.css
+++ b/src/pages/Create/CreateEditor/CreateEditor.css
@@ -22,7 +22,7 @@
     position: absolute;
     left: 60px;
     top: 20px;
-    color: var(--dark-grey-text);
+    color: var(--disabled-button-dark);
     font-family: 'Sansation', sans-serif;
     font-size: 18px;
     font-style: normal;
